ecmascript/parser/tests/typescript-errors/decorators/type-arguments-invalid/input.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/typescript-errors/type-arguments-invalid/input.ts:1:1
  |
1 | @decorator<string>
  | ^

